Added microservices dependencies and discovery 1. Demonstrates Eureka discovery server and clients 2. Demonstrates client side service discovery and load balancing

--- a/.gitignore
+++ b/.gitignore
@@ -13,3 +13,5 @@ buildNumber.properties
 SpringBoot.iml
 microservices/microservices.iml
 microservices/catalogserv/catalogserv.iml
+*.iml
+ratingserv/ratingserv.iml
