--- a/microservices/ratingserv/pom.xml
+++ b/microservices/ratingserv/pom.xml
@@ -2,25 +2,29 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0"
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+    <parent>
+        <groupId>org.picokernel</groupId>
+        <artifactId>microservices</artifactId>
+        <version>1.0-SNAPSHOT</version>
+        <relativePath>../pom.xml</relativePath> <!-- lookup parent from repository -->
+    </parent>
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>org.picokernel</groupId>
-    <artifactId>microservices</artifactId>
-    <version>1.0-SNAPSHOT</version>
+    <artifactId>ratingserv</artifactId>
+    <version>0.0.1-SNAPSHOT</version>
     <packaging>pom</packaging>
+    <modules>
+        <module>ratingservApi</module>
+        <module>ratingservApp</module>
+    </modules>
 
     <properties>
         <maven.compiler.source>8</maven.compiler.source>
         <maven.compiler.target>8</maven.compiler.target>
+        <spring-cloud.version>2020.0.2</spring-cloud.version>
         <spring-boot.version>2.4.5</spring-boot.version>
     </properties>
-
-    <modules>
-        <module>catalogserv</module>
-        <module>ratingserv</module>
-        <module>bookinfoserv</module>
-        <module>discovery-server</module>
-    </modules>
 
     <dependencyManagement>
         <dependencies>
@@ -28,6 +32,20 @@
                 <groupId>org.springframework.boot</groupId>
                 <artifactId>spring-boot-starter-web</artifactId>
                 <version>${spring-boot.version}</version>
+                <exclusions>
+                    <exclusion>
+                        <groupId>org.springframework.boot</groupId>
+                        <artifactId>spring-boot-starter-tomcat</artifactId>
+                    </exclusion>
+                </exclusions>
+            </dependency>
+            <!-- NOTE: Needed for Eureka client -->
+            <dependency>
+                <groupId>org.springframework.cloud</groupId>
+                <artifactId>spring-cloud-dependencies</artifactId>
+                <version>${spring-cloud.version}</version>
+                <type>pom</type>
+                <scope>import</scope>
             </dependency>
             <dependency>
                 <groupId>org.springframework.boot</groupId>
@@ -42,5 +60,4 @@
             </dependency>
         </dependencies>
     </dependencyManagement>
-
 </project>
