--- a/microservices/movieinfoserv/movieinfoservApp/pom.xml
+++ b/microservices/movieinfoserv/movieinfoservApp/pom.xml
@@ -3,13 +3,13 @@
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <parent>
-        <artifactId>bookinfoserv</artifactId>
+        <artifactId>movieinfoserv</artifactId>
         <groupId>org.picokernel</groupId>
         <version>0.0.1-SNAPSHOT</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
-    <artifactId>bookinfoservApp</artifactId>
+    <artifactId>movieinfoservApp</artifactId>
 
     <properties>
         <maven.compiler.source>8</maven.compiler.source>
@@ -19,7 +19,7 @@
     <dependencies>
         <dependency>
             <groupId>org.picokernel</groupId>
-            <artifactId>bookinfoservApi</artifactId>
+            <artifactId>movieinfoservApi</artifactId>
             <version>${project.version}</version>
         </dependency>
         <dependency>
@@ -59,7 +59,7 @@
                         <configuration>
                             <classifier>spring-boot</classifier>
                             <mainClass>
-                                org.picokernel.books.BooksInfoApplication
+                                org.picokernel.movies.MoviesInfoApplication
                             </mainClass>
                         </configuration>
                     </execution>
