--- a/microservices/movieinfoserv/pom.xml
+++ b/microservices/movieinfoserv/pom.xml
@@ -5,12 +5,12 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>org.picokernel</groupId>
-    <artifactId>bookinfoserv</artifactId>
+    <artifactId>movieinfoserv</artifactId>
     <version>0.0.1-SNAPSHOT</version>
     <packaging>pom</packaging>
     <modules>
-        <module>bookinfoservApi</module>
-        <module>bookinfoservApp</module>
+        <module>movieinfoservApi</module>
+        <module>movieinfoservApp</module>
     </modules>
 
     <properties>
