--- a/microservices/pom.xml
+++ b/microservices/pom.xml
@@ -18,7 +18,7 @@
     <modules>
         <module>catalogserv</module>
         <module>ratingserv</module>
-        <module>bookinfoserv</module>
+        <module>movieinfoserv</module>
         <module>discovery-server</module>
     </modules>
 
